# walltrack

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.override.yml  docker-compose.yml  pyproject.toml  run_migrations.py
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.claude/: settings.local.json
.serena/: project.yml
.serena/memories/: 3-1-code-review-issues.md  3-1-review-attack-plan.md  architecture-decision-rpc-vs-helius.md
core/analysis/: wallet_performance_analyzer.py
data/models/: decay_event.py
docs/: TESTING.md  architecture.md  bmm-workflow-status.yaml  epics.md  implementation-readiness-report-2025-12-15.md  implementation-readiness-report-2025-12-31.md  implementation-readiness-report-2026-01-05.md  implementation-readiness-report.md  prd.md  product-brief.md  project_context.md  rebuild-v2-notes.md  sprint-change-proposal-2025-12-31.md  ux-design-specification.md
docs/analysis/: initial_notes.md  product-brief-walltrack-2025-12-15.md
docs/architecture/: api-rate-limits-capacity-planning.md  component-architecture.md  core-architectural-decisions.md  database-schema-design-data-first-approach.md  deployment-operations.md  documentation-structure.md  implementation-patterns-consistency-rules.md  index.md  next-steps-implementation-roadmap.md  observability-monitoring.md  performance-optimization.md  project-context-analysis.md  security-implementation.md  starter-template-evaluation.md  testing-strategy.md
docs/archive/: architecture.md  epics.md  prd.md  ux-design-specification.md
docs/database-design/: 01-config.md  02-exit-strategies.md  03-wallets.md  04-tokens.md  05-signals.md  06-orders.md  07-positions.md  08-performance.md  09-circuit-breaker-events.md  README.md  migration-execution-guide.md
docs/diagrams/: theme.json
docs/epics/: epic-1-data-foundation-ui-framework.md  epic-2-smart-money-discovery-token-safety.md  epic-3-automated-position-management-exit-strategies.md  epic-4-wallet-intelligence-performance-analytics.md  epic-5-system-configuration-risk-management.md  epic-list.md  index.md  overview.md  requirements-inventory.md
docs/prd/: appendix.md  dependencies-integrations.md  executive-summary.md  functional-requirements.md  index.md  non-functional-requirements.md  product-scope.md  project-classification.md  risks-mitigations.md  success-criteria.md  system-configuration-parameters.md  technical-requirements.md  user-journeys.md
docs/sprint-artifacts/: sprint-status.yaml  tea-intervention-plan.md
docs/test-artifacts/: e2e-test-scenarios-v1.md
docs/ux-design-specification/: 2-defining-core-experience.md  component-strategy.md  core-user-experience.md  design-direction-decision.md  design-system-foundation.md  desired-emotional-response.md  executive-summary.md  index.md  responsive-design-accessibility.md  user-journey-flows.md  ux-consistency-patterns.md  ux-pattern-analysis-inspiration.md  visual-design-foundation.md
legacy/: project_context.md  ux-design-legacy.md
legacy/docs/: bmm-workflow-status.yaml  epics.md  test-design-system.md
legacy/migrations/: V10__price_history.sql  V11__daily_snapshots.sql  V12__alerts.sql  V14__exit_strategies_lifecycle.sql  V8__config_centralization.sql  cleanup-migration.sql
legacy/scripts/: apply_missing_migrations.sql  apply_missing_tables.sql  collect_historical_pumps.py  run_backtest_simulation.py  seed_data.py  setup_supabase.py
legacy/tests/: __init__.py  conftest.py
migrations/: V13__config_lifecycle.sql  V20__add_discovery_source.sql  V9__orders_table.sql
scripts/: apply_discovery_migrations.py  check_and_run_backtest.py  check_wallet_statuses.py  clean_databases.py  collect_granular_prices.py  health-check.sh  health_check.py  migrate_neo4j_relationships.py  run_discovery.py  run_migration_006b.py  run_migration_007.py  run_migrations.py  setup_neo4j.py  test_rpc_limits.py  test_wallet_analysis.py  test_wallet_transactions.py  verify_neo4j_schema.py
src/walltrack/: __init__.py  main.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: __init__.py  conftest.py  run_playwright_e2e.py  seed_test_data.py  simulate_webhook.py  test_accordion_click.py  test_debug_navigation.py  test_debug_wallets_table.py  test_epic1_validation.py  test_epic2_validation.py  test_epic3_behavioral_profiling.py  test_epic3_behavioral_profiling_story36.py  test_epic3_config_management_story36.py  test_epic3_decay_detection_story36.py  test_epic3_performance_analysis_story36.py  test_epic3_performance_sidebar_story32.py  test_epic3_wallet_discovery_story36.py  test_epic3_wallet_performance.py  test_epic3_watchlist_management_story36.py  test_example.py  test_explorer_navigation.py  (+4 more)
tests/unit/: __init__.py  (+7 more)
(+947 files in other folders)
