[project]
name = "walltrack"
version = "0.1.0"
description = "Intelligent wallet tracking and automated trading system for Solana memecoins"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Christophe" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gradio>=5.0.0",
    "plotly>=5.24.0",
    "neo4j>=5.25.0",
    "supabase>=2.10.0",
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "apscheduler>=3.10.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "xgboost>=2.1.0",
    "scikit-learn>=1.5.0",
    "asyncpg>=0.31.0",
    "solders>=0.27.1",
    "solana>=0.36.10",
    "base58>=2.1.1",
]

[project.optional-dependencies]
test = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-timeout>=2.3.0",
    "pytest-playwright>=0.5.0",
    "respx>=0.21.0",
    "factory-boy>=3.3.0",
    "faker>=33.0.0",
]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
walltrack = "walltrack.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/walltrack"]

# ============================================================================
# pytest configuration
# ============================================================================
[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests (fast, no external dependencies)",
    "integration: Integration tests (may require DB/services)",
    "e2e: End-to-end tests (full system, Playwright)",
    "slow: Slow tests (skip with -m 'not slow')",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# ============================================================================
# coverage configuration
# ============================================================================
[tool.coverage.run]
source = ["src/walltrack"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
fail_under = 80
show_missing = true

# ============================================================================
# ruff configuration
# ============================================================================
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "PTH",    # flake8-use-pathlib
    "ERA",    # eradicate (commented code)
    "PL",     # Pylint
    "RUF",    # Ruff-specific
]
ignore = [
    "B008",     # Function call in default argument (FastAPI Depends pattern)
    "PLR0913",  # Too many arguments
    "PLR2004",  # Magic value comparison
    "PLW0603",  # Global statement (acceptable for singleton pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["walltrack"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "PLC0415"]  # Allow long lines and non-top-level imports in tests

# ============================================================================
# mypy configuration
# ============================================================================
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
no_implicit_optional = true
warn_redundant_casts = true

[[tool.mypy.overrides]]
module = [
    "neo4j.*",
    "supabase.*",
    "gradio.*",
    "apscheduler.*",
    "xgboost.*",
    "sklearn.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pandas-stubs>=2.3.3.251201",
]
