[project]
name = "walltrack"
version = "0.1.0"
description = "WallTrack - Smart Money Wallet Tracker"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Christophe" }]

dependencies = []

[project.optional-dependencies]
dev = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/walltrack"]
